--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,5 +5,14 @@ RUN apt-get update && apt-get install -y \
     libsqlite3-dev \
  && rm -rf /var/lib/apt/lists/*
 
+WORKDIR /app
+
+COPY tools/users.sql .
+
+RUN sqlite3 ma_base.db < users.sql
+
+CMD ["tail", "-f", "/dev/null"]
+
+
 
  
