--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
   backend:
     build: backend/.
     container_name: backend
+    ports:
+      - "3000:3000"
     volumes:
       - database:/app
     command: ["tail", "-f", "/dev/null"]
