--- a/frontend/tools_docker/default.conf
+++ b/frontend/tools_docker/default.conf
@@ -1,15 +1,19 @@
 
 server {
-    listen 443 ssl;
-    server_name lelanglo.42.fr;
+  listen 443 ssl;
+  server_name localhost;
 
-    ssl_certificate /etc/ssl/private/transcend.crt;
-    ssl_certificate_key /etc/ssl/private/transcend.key;
+  ssl_certificate /etc/ssl/private/transcend.crt;
+  ssl_certificate_key /etc/ssl/private/transcend.key;
 
+  location / {
     root /var/www/html;
     index index.html;
+  }
 
-    location / {
-        try_files $uri $uri/ =404;
-    }
+  location /api/ {
+    proxy_pass https://backend:3000/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+  }
 }
