+| hidepassword permet de hide les password..., mis a jour du code en faisant une fonction pour les meme fonctionnalite toggle password, hidepassword and checkPassworMatch

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,11 @@
     "build": "tailwindcss -i ./src/css/input.css -o ./src/css/style.css --watch",
     "chat": "tsc src/chat/chat.ts --watch",
     "game": "tsc src/game/game.ts --watch",
-    "login": "tsc src/login/auth.ts --watch",
+    "login": "tsc src/login/auth.ts --module ES6 --target ES6 --watch",
     "local":  "tsc src/game/pong.ts --watch",
-    "profil":  "tsc src/profile/profile.ts --watch",
-    "redir": "tsc src/profile/redirectionbtn.ts --watch"
+    "profil":  "tsc src/profile/profile.ts --module ES6 --target ES6 --watch",
+    "redir": "tsc src/profile/redirectionbtn.ts --watch",
+    "utils": "tsc src/profile/utils.ts --module ES6 --target ES6 --watch"
   },
   "keywords": [],
   "author": "",
