--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "pong-server",
+  "name": "game",
   "version": "1.0.0",
-  "main": "dist/server/server.js",
+  "main": "local.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/server/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.18.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/node": "^16.18.126",
+    "typescript": "^4.5.5"
   }
 }
-
