plus grand chose a changer

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,14 @@ FROM node:18-slim
 
 RUN apt-get update && apt-get install -y \
     sqlite3 \
-    libsqlite3-dev \
+    libsqlite3-dev openssl\
  && rm -rf /var/lib/apt/lists/*
 
+RUN openssl req -x509 -nodes -days 365 \
+    -subj "/C=FR/ST=Paris/L=Paris/O=42/CN=lelanglo.42.fr" \
+    -newkey rsa:2048 \
+    -keyout serv.key \
+    -out serv.crt
 
 COPY package*.json ./
 
