ca marche que sur google et un ordi a la fois

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,17 +2,12 @@ FROM node:18-slim
 
 RUN apt-get update && apt-get install -y \
     sqlite3 \
-    libsqlite3-dev openssl\
+    libsqlite3-dev openssl \
  && rm -rf /var/lib/apt/lists/*
 
-RUN openssl req -x509 -nodes -days 365 \
-    -subj "/C=FR/ST=Paris/L=Paris/O=42/CN=lelanglo.42.fr" \
-    -newkey rsa:2048 \
-    -keyout serv.key \
-    -out serv.crt
+WORKDIR /app
 
 COPY package*.json ./
-
 RUN npm install
 
 COPY . .
@@ -23,5 +18,5 @@ RUN sqlite3 user.db < tools/users.sql
 RUN sqlite3 chat.db < tools/chat.sql
 
 EXPOSE 3000
-
 CMD ["node", "server/server.js"]
+
