--- a/frontend/tools_docker/default.conf
+++ b/frontend/tools_docker/default.conf
@@ -3,17 +3,11 @@ server {
   listen 443 ssl;
   server_name localhost;
 
-  ssl_certificate /etc/ssl/private/transcend.crt;
-  ssl_certificate_key /etc/ssl/private/transcend.key;
+  ssl_certificate /certs/transcend.crt;
+  ssl_certificate_key /certs/transcend.key;
 
   location / {
     root /var/www/html;
     index index.html;
-  }
-
-  location /api/ {
-    proxy_pass https://backend:3443/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
   }
 }
