--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - "3000:3000"
     volumes:
       - certs:/certs
+      - database:/database
     networks:
       - transcendence
 
