--- a/frontend/tools_docker/default.conf
+++ b/frontend/tools_docker/default.conf
@@ -1,13 +1,18 @@
 
 server {
-  listen 443 ssl;
-  server_name localhost;
+    listen 443 ssl http2;
+    server_name localhost;
 
-  ssl_certificate /certs/transcend.crt;
-  ssl_certificate_key /certs/transcend.key;
+    ssl_certificate /certs/transcend.crt;
+    ssl_certificate_key /certs/transcend.key;
 
-  location / {
-    root /var/www/html;
-    index index.html;
-  }
+    location /app1/ {
+        proxy_pass https://10.12.200.35:3000/;
+        proxy_ssl_verify off;
+    }
+
+    location / {
+        root /var/www/html;
+        index index.html;
+    }
 }
