--- a/frontend/tools_docker/default.conf
+++ b/frontend/tools_docker/default.conf
@@ -10,6 +10,10 @@ server {
         proxy_pass https://10.12.200.35:3000/;
         proxy_ssl_verify off;
     }
+    location /app2/ {
+        proxy_pass https://10.12.200.35:4242/;
+        proxy_ssl_verify off;
+    }
 
     location / {
         root /var/www/html;
