--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,6 +11,8 @@ COPY . .
 
 RUN npx tsc -p server
 
-EXPOSE 3000
+EXPOSE 3000-3100
 EXPOSE 3451
+EXPOSE 4000
+
 CMD ["node", "server/main_server.js"]
