redirection au debut

--- a/frontend/tools_docker/default.conf
+++ b/frontend/tools_docker/default.conf
@@ -19,4 +19,8 @@ server {
         root /var/www/html;
         index index.html;
     }
+
+    location = / {
+    return 302 /src/login/login.html;
+    }  
 }
