--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -14,7 +14,6 @@ RUN sqlite3 chat.db < tools/chat.sql
 RUN chmod +x start.sh
 
 EXPOSE 3451
-EXPOSE 3453
 
-CMD ["./start.sh"]
+CMD ["node", "server_api.js"]
 # CMD ["tail", "-f", "/dev/null"]
