--- a/backend/server/tsconfig.json
+++ b/backend/server/tsconfig.json
@@ -98,5 +98,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["server.ts", "main_server.ts"],
+  "include": ["server.ts", "game_router.ts", "main_server.ts"],
 }
