spa marche bien avec script, pour les page login, register, a2f

--- a/frontend/tools_docker/default.conf
+++ b/frontend/tools_docker/default.conf
@@ -6,8 +6,12 @@ server {
     ssl_certificate /certs/transcend.crt;
     ssl_certificate_key /certs/transcend.key;
 
+    root /var/www/html;
+    index index.html;
+
+    # Redirection de toutes les requêtes vers index.html pour le routage côté client
     location / {
-        root /var/www/html;
-        index index.html;
+        try_files $uri $uri/ /index.html;
     }
+
 }
