--- a/database/package.json
+++ b/database/package.json
@@ -104,6 +104,7 @@
     "is-promise": "^4.0.0",
     "isexe": "^2.0.0",
     "jsbn": "^1.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lru-cache": "^6.0.0",
     "make-fetch-happen": "^9.1.0",
     "Math": "^0.0.1-security",
@@ -211,6 +212,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
     "@types/ws": "^8.18.1",
