--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "chart": "^0.1.2",
     "chart.js": "^4.4.9",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "lent": "^1.5.4",
     "path": "^0.12.7"
   }
 }
