tournois -> création dans la bdd et visible dans le home

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -16,6 +16,7 @@ RUN npx tsc
 
 RUN sqlite3 user.db < tools/users.sql
 RUN sqlite3 chat.db < tools/chat.sql
+RUN sqlite3 tournaments.db < tools/tournaments.sql
 
 EXPOSE 3451
 
