--- a/frontend/tools_docker/default.conf
+++ b/frontend/tools_docker/default.conf
@@ -6,6 +6,7 @@ server {
 
     ssl_certificate /certs/transcend.crt;
     ssl_certificate_key /certs/transcend.key;
+    client_max_body_size 10M;
 
     root /var/www/html;
     index index.html;
