--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -5,7 +5,6 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 RUN mkdir database
-WORKDIR /database
 
 COPY package*.json ./
 RUN npm install
@@ -14,8 +13,8 @@ COPY . .
 
 RUN npx tsc
 
-RUN sqlite3 user.db < tools/users.sql
-RUN sqlite3 chat.db < tools/chat.sql
+RUN sqlite3 database/user.db < tools/users.sql
+RUN sqlite3 database/chat.db < tools/chat.sql
 
 EXPOSE 3451
 
