--- a/frontend/tools_docker/default.conf
+++ b/frontend/tools_docker/default.conf
@@ -7,6 +7,10 @@ server {
     ssl_certificate /certs/transcend.crt;
     ssl_certificate_key /certs/transcend.key;
     client_max_body_size 10M;
+    proxy_connect_timeout       60;
+    proxy_send_timeout          60;
+    proxy_read_timeout          60;
+    send_timeout                60;
 
     root /var/www/html;
     index index.html;
@@ -22,6 +26,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_request_buffering off;
+        client_max_body_size 10M;
         proxy_ssl_verify off; # Nécessaire car votre backend utilise aussi des certificats auto-signés
     }
 
@@ -34,6 +40,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        client_max_body_size 10M;
         proxy_ssl_verify off; # Toujours nécessaire car le backend a un certificat auto-signé
         proxy_read_timeout 86400s; # Augmente le timeout pour les connexions persistantes
     }
@@ -45,6 +52,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_request_buffering off;
         proxy_ssl_verify off; # Nécessaire car votre backend utilise aussi des certificats auto-signés
     }
 
