-| truc inutile dans docker file, plus besoin de refresh pour la liste d\'amis et l'historique de notre profil quand on change de langue

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20-slim
 
 # Install nginx and openssl
-RUN apt update && apt install -y nginx openssl
+RUN apt update && apt install -y nginx openssl && rm -rf /var/lib/apt/lists/*
 
 # Certificats auto-signés
 RUN mkdir /certs && \
