--- a/frontend/tools_docker/default.conf
+++ b/frontend/tools_docker/default.conf
@@ -2,7 +2,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-    server_name lelanglo.42.fr; # Assurez-vous que cela correspond au CN de votre certificat et à votre IP_NAME
+    server_name lelanglo.42.fr;
 
     ssl_certificate /certs/transcend.crt;
     ssl_certificate_key /certs/transcend.key;
@@ -15,48 +15,47 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy les requêtes vers votre API backend
     location /api/ {
-        proxy_pass https://database:3451/; # 'database' est le nom du service dans docker-compose
+        proxy_pass https://database:3451/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_request_buffering off;
         client_max_body_size 10000M;
-        proxy_ssl_verify off; # Nécessaire car votre backend utilise aussi des certificats auto-signés
+        proxy_ssl_verify off;
     }
 
     location /ws/ {
-        proxy_pass https://database:3451/; # Proxy vers votre serveur Fastify/WebSocket interne
+        proxy_pass https://database:3451/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade; # Nécessaire pour l'upgrade en WebSocket
-        proxy_set_header Connection "upgrade"; # Nécessaire pour l'upgrade en WebSocket
-        proxy_set_header Host $host; # Transmet l'en-tête Host original
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         client_max_body_size 10M;
-        proxy_ssl_verify off; # Toujours nécessaire car le backend a un certificat auto-signé
-        proxy_read_timeout 86400s; # Augmente le timeout pour les connexions persistantes
+        proxy_ssl_verify off;
+        proxy_read_timeout 86400s;
     }
 
     location /api/main/ {
-        proxy_pass https://backend:4000/; # 'backend' est le nom du service dans docker-compose
+        proxy_pass https://backend:4000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_request_buffering off;
-        proxy_ssl_verify off; # Nécessaire car votre backend utilise aussi des certificats auto-signés
+        proxy_ssl_verify off;
     }
 
     location /api/multi/ {
-        proxy_pass https://backend:4001/; # 'backend' est le nom du service dans docker-compose
+        proxy_pass https://backend:4001/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_ssl_verify off; # Nécessaire car votre backend utilise aussi des certificats auto-signés
+        proxy_ssl_verify off;
     }
 }
