--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:20-slim
 
 RUN apt-get update
-
-WORKDIR /app
+RUN mkdir backend
+WORKDIR /backend
 
 COPY package*.json ./
 RUN npm install
