--- a/frontend/tools_docker/default.conf
+++ b/frontend/tools_docker/default.conf
@@ -2,11 +2,11 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-    server_name lelanglo.42.fr;
+    server_name ft_babyfoot.42.fr;
 
     ssl_certificate /certs/transcend.crt;
     ssl_certificate_key /certs/transcend.key;
-    client_max_body_size 10000M;
+    client_max_body_size 10M;
 
     root /var/www/html;
     index index.html;
@@ -21,8 +21,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_request_buffering off;
-        client_max_body_size 10000M;
+        client_max_body_size 10M;
         proxy_ssl_verify off;
     }
 
@@ -35,7 +34,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        client_max_body_size 10M;
         proxy_ssl_verify off;
         proxy_read_timeout 86400s;
     }
@@ -46,7 +44,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_request_buffering off;
         proxy_ssl_verify off;
     }
 
